1.4.0 (SVN/unreleased)
======================

1.4.0-alpha2
============

 * Started to use views and viewlet managers.
   [fschulze]

 * Removed compatibility stuff for Plone version lower than 3.0.
   [fschulze]

1.3.6
=====

 * Fixed string replacement during packing when several resources got packed
   in different threads at once, which resulted in exchanged strings.
   [fschulze]

1.3.5
=====

 * Fixed string protection for strings which mix single and double quotes.
   [fschulze]

 * Made packer.py usable as a standalone commandline tool.
   [fschulze]

 * Fixed several issues in 'full' compression.
   [fschulze]
   
 * Extended the GenericSetup import step to support positioning of resources:
   the 'position-before' and 'position-after' attributes cause the resource
   to be positioned before or after resource named in the attribute. 
   'position-top' and 'position-bottom' move a resource to the top or bottom.
   [mj]

1.3.4
=====

 * Improved IE conditional compilation protection, it now works in "full"
   compression.
   [fschulze]

 * Improved regular expression for strings.
   [fschulze]

 * Fixed order of oneline and multiline comment removal in javascript packer.
   [fschulze]

 * Fixed validation warning about multiple comments when rendering resources
   inline.
   [fschulze]

 * Made css "full" packing more aggressive.
   [fschulze]

 * Cleaned up testing framework and made all tests run properly.
   [fschulze, hannosch]

1.3.3
=====

 * Don't wrap None in aquisition wrapper if resource is not found.
   [tesdal]

1.3.2
=====

 * Made GenericSetup importer not fail on repeated imports.
   [alecm]

 * Made enabled checkbox work again.
   [fschulze]

1.3.1
=====

 * Enable use of z3 / Five resources.
   [ree]

 * Mark missing or unaccessible ressources in management screens.
   [fschulze]

 * Moved 'enabled' checkbox into legend before 'id' textbox.
   [fschulze]

 * Don't remove conditional compile instructions for IE from javascripts.